--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# TODO: adjust gitignore
 ######################
 # Node
 ######################
@@ -14,23 +15,6 @@ npm-debug.log.*
 ######################
 .sass-cache/
 
-######################
-# Eclipse
-######################
-*.pydevproject
-.project
-.metadata
-tmp/
-tmp/**/*
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-.loadpath
-.factorypath
 
 # External tool builders
 .externalToolBuilders/**
@@ -41,5 +25,48 @@ local.properties
 # CDT-specific
 .cproject
 
+# CRA generated gitignore 
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# env files (can opt-in for committing if needed)
+.env*
+
+# vercel
+.vercel
+
 # PDT-specific
 .buildpath
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
